# gnu_dico

./: ChangeLog  Makefile.am  acconfig.h  configure.in  stub.ac
client/: Gjdict.ad  Makefile.am  bushu.code.c  bushusearch.c  client.c  client.h  convert.c  cornersearch.c  cystack.c  cystack.h  getfile.c  gjdict.chl  gjdict.help  help.c  help.h  helpfile.c  init.c  kanasearch.c  license.c  log.c  log.h  main.c  msg.c  options.c  options.h  search.c  search.h  skipsearch.c  tmac.gjdict  util.c  util.h  widgets.c  xref.c
dbs/: Makefile.am  dclose.c  dcreate.c  dflush.c  dmode.c  dopen.c  dread.c  dreadpriv.c  dseek.c  dwrite.c  dwritepriv.c  iadd.c  iblk.c  ibottom.c  ibuild.c  iclose.c  icmp.c  icmplen.c  icreate.c  ilock.c  imode.c  iopen.c  irecno.c  iseek.c  iseq.c  iskip.c  isync.c  itop.c  ivalue.c  mem.c  reorder.c
fonts/: 1.xbm  100.xbm  101.xbm  102.xbm  103.xbm  104.xbm  105.xbm  106.xbm  107.xbm  108.xbm  109.xbm  11.xbm  110.xbm  111.xbm  112.xbm  113.xbm  114.xbm  115.xbm  116.xbm  117.xbm  118.xbm  119.xbm  12.xbm  120.xbm  121.xbm  122.xbm  123.xbm  124.xbm  125.xbm  126.xbm  127.xbm  128.xbm  129.xbm  13.xbm  130.xbm  131.xbm  132.xbm  133.xbm  134.xbm  135.xbm  (+207 more)
include/: Makefile.am  dbs.h  dict.h  gjdict.h  gjdictd.h
lib/: Makefile.am  WcharCommon.h  WcharCommonP.h  WcharSink.c  WcharSink.h  WcharSinkP.h  WcharSrc.c  WcharSrc.h  WcharSrcP.h  WcharText.c  WcharText.h  WcharTextP.h  bushu.h  jiscvt.c
makedict/: Makefile.am  btree.c  check.c  compile.c  index.c  info.c  main.c  makedict.h  output.c  romaji.c  utils.c
server/: Makefile.am  bushu.code.c  dict.c  gram.y  iputil.c  log.c  log.h  main.c  patchlevel.h  search.c  server.c  server.h  syntax.h  utils.c
utils/: Makefile.am  bdfextract.pl  bushu.awk  helpcmp.pl  knr2ansi  mkbushufont  revbits.c
