# $Id: Makefile.am,v 1.1 2001/11/03 22:33:31 gray Exp $
noinst_LIBRARIES=libdbs.a
libdbs_a_SOURCES=iclose.c iopen.c ibuild.c icreate.c icmp.c reorder.c\
                 iblk.c iadd.c itop.c ibottom.c iskip.c isync.c iseek.c\
                 ilock.c iseq.c irecno.c ivalue.c imode.c icmplen.c\
                 dclose.c dcreate.c dflush.c dmode.c dopen.c dread.c\
                 dseek.c dwrite.c dreadpriv.c dwritepriv.c mem.c
INCLUDES=-I$(top_srcdir)/include

