INCLUDES = -I${top_srcdir}/include

noinst_LIBRARIES=libwchar.a 

libwchar_a_SOURCES=WcharSink.c WcharSrc.c WcharText.c jiscvt.c

noinst_HEADERS=\
 WcharCommon.h\
 WcharCommonP.h\
 WcharSink.h\
 WcharSinkP.h\
 WcharSrc.h\
 WcharSrcP.h\
 WcharText.h\
 WcharTextP.h\
 cursor.xbm\
 bushu.h

EXTRA_DIST=bushu.dat
